tests/ui/match/issue-72896-non-partial-eq-const.stderr
error: to use a constant of type `EnumSet<Enum8>` in a pattern, the type must implement `PartialEq`
  --> $DIR/issue-72896-non-partial-eq-const.rs:19:9
   |
LL | const CONST_SET: EnumSet<Enum8> = EnumSet { __enumset_underlying: 3 };
   | ------------------------------- constant defined here
...
LL |         CONST_SET => { /* ok */ }
   |         ^^^^^^^^^ constant of non-structural type

error: aborting due to 1 previous error

